--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smartlab-management-system",
+  "name": "smartlab---enterprise-lab-management-system",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "recharts": "^3.6.0",
     "react": "^19.2.3",
-    "lucide-react": "^0.562.0",
     "react-dom": "^19.2.3",
-    "recharts": "^3.6.0"
+    "react-router-dom": "^7.11.0",
+    "lucide-react": "^0.562.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
